--- a/magda-gateway/package.json
+++ b/magda-gateway/package.json
@@ -64,6 +64,7 @@
     "@types/passport-facebook": "^2.1.8",
     "@types/passport-local": "^1.0.31",
     "@types/pg": "^6.1.41",
+    "@types/randomstring": "^1.1.6",
     "@types/read-pkg-up": "^3.0.1",
     "@types/request": "2.47.0",
     "@types/sinon": "^2.3.3",
@@ -73,6 +74,7 @@
     "chai": "^4.1.0",
     "mocha": "^3.4.2",
     "nock": "^9.0.14",
+    "randomstring": "^1.1.5",
     "request": "^2.79.0",
     "sinon": "^2.4.1",
     "supertest": "^3.0.0",
