Use the help class StreamController in reindexing.

--- a/magda-indexer/src/main/resources/application.conf
+++ b/magda-indexer/src/main/resources/application.conf
@@ -31,6 +31,14 @@ indexer {
   makeSnapshots = false
   connectionRetries = 10
   requestThrottleMs = 1000
+  indexingBufferSize = 1000
+  indexingQueueBufferSize = 50
+  indexingMaxBatchSize = 500
+  indexingInitialBatchDelayMs = 500
+}
+
+crawler {
+  streamControllerSourceBufferSize = 2000
 }
 
 registry {
