--- a/magda-registry-api/package.json
+++ b/magda-registry-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/registry-api",
-  "version": "0.0.49",
+  "version": "0.0.50-RC1",
   "description": "The registry API.",
   "license": "Apache-2.0",
   "scripts": {
