--- a/magda-web-client/package.json
+++ b/magda-web-client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/web-client",
   "description": "The MAGDA in-browser web front end.",
-  "version": "0.0.49",
+  "version": "0.0.50-RC1",
   "license": "Apache-2.0",
   "scripts": {
     "storybook": "start-storybook -p 9001 -c .storybook -s ./public",
@@ -45,7 +45,7 @@
     "leaflet": "^0.7.7"
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.49",
+    "@magda/scripts": "^0.0.50-RC1",
     "@storybook/addon-actions": "^3.3.3",
     "@storybook/addon-links": "^3.3.3",
     "@storybook/addons": "^3.3.3",
