--- a/magda-project-open-data-connector/package.json
+++ b/magda-project-open-data-connector/package.json
@@ -30,11 +30,13 @@
   "dependencies": {
     "@magda/registry-aspects": "^0.0.51-0",
     "@magda/typescript-common": "^0.0.51-0",
+    "@types/to-markdown": "^3.0.0",
     "jsonpath": "^0.2.11",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "read-pkg-up": "^3.0.0",
     "request": "^2.79.0",
+    "to-markdown": "^3.1.1",
     "urijs": "^1.18.12",
     "yargs": "^8.0.1"
   },
