--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -98,6 +98,9 @@ correspondence-api:
   smtpHostname: "smtp.mailgun.org"
   smtpPort: 2525
 
+minion-broken-link:
+  domainWaitTimeConfig: '{"data.csiro.au":60,"data.gov.au":60,"data.act.gov.au":30}'
+
 connectors:
   config:
     - image:
