--- a/deploy/helm/magda/charts/minion-broken-link/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/minion-broken-link/templates/deployment.yaml
@@ -36,6 +36,10 @@ spec:
           value: {{ .Values.global.defaultAdminUserId }}
         - name: INTERNAL_URL
           value: "http://minion-broken-link"
+{{- if .Values.domainWaitTimeConfig }}
+        - name: DOMAIN_WAIT_TIME_CONFIG
+          value: {{ .Values.domainWaitTimeConfig | quote }}
+{{- end }}
         - name: JWT_SECRET
           valueFrom:
             secretKeyRef:
