--- a/magda-elastic-search/package.json
+++ b/magda-elastic-search/package.json
@@ -14,6 +14,58 @@
     "docker": {
       "name": "data61/magda-elasticsearch",
       "include": "Dockerfile elasticsearch.yml setup.sh wn_s.pl"
+    },
+    "regionSources": {
+      "SA4": {
+        "url": "https://s3-ap-southeast-2.amazonaws.com/magda-files/SA4.geojson",
+        "idField": "SA4_CODE11",
+        "nameField": "SA4_NAME11",
+        "order": 30
+      },
+      "SA3": {
+        "url": "https://s3-ap-southeast-2.amazonaws.com/magda-files/SA3.geojson",
+        "idField": "SA3_CODE11",
+        "nameField": "SA3_NAME11",
+        "order": 40
+      },
+      "SA2": {
+        "url": "https://s3-ap-southeast-2.amazonaws.com/magda-files/SA2.geojson",
+        "idField": "SA2_MAIN11",
+        "nameField": "SA2_NAME11",
+        "order": 50
+      },
+      "SA1": {
+        "url": "https://s3-ap-southeast-2.amazonaws.com/magda-files/SA1.geojson",
+        "idField": "SA1_MAIN11",
+        "nameField": "SA1_MAIN11",
+        "includeIdInName": false,
+        "order": 60
+      },
+      "LGA": {
+        "url": "https://s3-ap-southeast-2.amazonaws.com/magda-files/LGA.geojson",
+        "idField": "LGA_CODE15",
+        "nameField": "LGA_NAME15",
+        "order": 20
+      },
+      "POA": {
+        "url": "https://s3-ap-southeast-2.amazonaws.com/magda-files/POA.geojson",
+        "idField": "POA_CODE",
+        "nameField": "POA_NAME",
+        "order": 70
+      },
+      "COM_ELB_ID_2016": {
+        "url": "https://s3-ap-southeast-2.amazonaws.com/magda-files/COM_ELB_ID_2016.geojson",
+        "idField": "DIV_ID",
+        "nameField": "SORTNAME",
+        "order": 80
+      },
+      "STE": {
+        "url": "https://s3-ap-southeast-2.amazonaws.com/magda-files/STE.geojson",
+        "idField": "STE_CODE11",
+        "nameField": "STE_NAME11",
+        "shortNameField": "STE_ABBREV",
+        "order": 10
+      }
     }
   },
   "devDependencies": {
