--- a/magda-dap-connector/package.json
+++ b/magda-dap-connector/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/dap-connector",
   "description": "MAGDA DAP Connector",
-  "version": "0.0.50-RC3",
+  "version": "0.0.51-0",
   "scripts": {
     "build": "yarn run compile",
     "compile": "yarn run compile-node && yarn run compile-browser",
@@ -17,7 +17,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@magda/scripts": "^0.0.50-RC3",
+    "@magda/scripts": "^0.0.51-0",
     "@types/express": "^4.0.37",
     "@types/node": "^8.0.14",
     "@types/read-pkg-up": "^3.0.1",
@@ -33,8 +33,8 @@
     "webpack": "^3.6.0"
   },
   "dependencies": {
-    "@magda/registry-aspects": "^0.0.50-RC3",
-    "@magda/typescript-common": "^0.0.50-RC3",
+    "@magda/registry-aspects": "^0.0.51-0",
+    "@magda/typescript-common": "^0.0.51-0",
     "body-parser": "^1.18.1",
     "express": "^4.15.4",
     "moment": "^2.17.1",
