--- a/magda-project-open-data-connector/package.json
+++ b/magda-project-open-data-connector/package.json
@@ -36,7 +36,7 @@
     "moment": "^2.17.1",
     "read-pkg-up": "^3.0.0",
     "request": "^2.79.0",
-    "to-markdown": "^3.1.1",
+    "turndown": "^5.0.1",
     "urijs": "^1.18.12",
     "yargs": "^12.0.5"
   },
