--- a/deploy/helm/magda/charts/content-db/templates/statefulset.yaml
+++ b/deploy/helm/magda/charts/content-db/templates/statefulset.yaml
@@ -17,7 +17,7 @@ spec:
       priorityClassName: magda-9
       terminationGracePeriodSeconds: 60
       affinity:
-        {{ include "magda.antiPreemptibleAffinity" . }}
+{{ toYaml .Values.affinity | indent 8 }}
       containers:
       - name: content-db
         resources:
