Made affinity work better on old k8s versions.

--- a/deploy/helm/magda/charts/elasticsearch/templates/data-statefulset.yml
+++ b/deploy/helm/magda/charts/elasticsearch/templates/data-statefulset.yml
@@ -21,7 +21,9 @@ spec:
       priorityClassName: magda-9
       terminationGracePeriodSeconds: 10
       affinity:
+{{- if .Values.affinity }}
 {{ toYaml .Values.affinity | indent 8 }}
+{{- end }}
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
           - weight: 50
