--- a/deploy/helm/magda/charts/combined-db/templates/statefulset.yaml
+++ b/deploy/helm/magda/charts/combined-db/templates/statefulset.yaml
@@ -17,7 +17,9 @@ spec:
       priorityClassName: magda-9
       terminationGracePeriodSeconds: 10
       affinity:
+{{- if .Values.affinity }}
 {{ toYaml .Values.affinity | indent 8 }}
+{{- end }}
       containers:
       - name: combined-db
         resources:
