--- a/magda-typescript-common/package.json
+++ b/magda-typescript-common/package.json
@@ -27,6 +27,7 @@
     "@types/urijs": "^1.15.34",
     "@types/uuid": "^3.4.0",
     "@types/yargs": "^8.0.2",
+    "@types/read-pkg-up": "^3.0.1",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "djv": "^2.1.1",
@@ -50,7 +51,8 @@
     "tsmonad": "^0.7.2",
     "urijs": "^1.18.12",
     "uuid": "^3.1.0",
-    "yargs": "^10.1.1"
+    "yargs": "^10.1.1",
+    "read-pkg-up": "^3.0.0"
   },
   "config": {
     "docker": {
