--- a/deploy/helm/magda/values.yaml
+++ b/deploy/helm/magda/values.yaml
@@ -16,6 +16,7 @@ global:
   gapiIds: []
 
 tags:
+  priorities: true
   all: true
   apidocs-server: false
   admin-api: false
@@ -40,4 +41,3 @@ tags:
   web-server: false
   ingress: false
   connectors: false
-  priorities: false
