--- a/magda-authorization-api/package.json
+++ b/magda-authorization-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/authorization-api",
-  "version": "0.0.51-0",
+  "version": "0.0.51-RC1",
   "scripts": {
     "build": "yarn run compile",
     "compile": "tsc -p tsconfig-build.json",
@@ -13,17 +13,17 @@
     "retag-and-push": "retag-and-push"
   },
   "dependencies": {
-    "@magda/typescript-common": "^0.0.51-0",
+    "@magda/typescript-common": "^0.0.51-RC1",
     "body-parser": "^1.13.2",
     "express": "^4.13.1",
     "jsonwebtoken": "^7.4.1",
+    "lodash": "^4.17.4",
     "pg": "^6.4.0",
     "tsmonad": "^0.7.2",
-    "yargs": "^8.0.2",
-    "lodash": "^4.17.4"
+    "yargs": "^8.0.2"
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.51-0",
+    "@magda/scripts": "^0.0.51-RC1",
     "@types/chai": "^4.1.2",
     "@types/express": "^4.0.35",
     "@types/lodash": "^4.14.96",
