--- a/magda-typescript-common/package.json
+++ b/magda-typescript-common/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/typescript-common",
   "description": "Common TypeScript code shared between components.",
-  "version": "0.0.51-0",
+  "version": "0.0.51-RC1",
   "license": "Apache-2.0",
   "scripts": {
     "build": "yarn run compile",
@@ -12,8 +12,8 @@
     "dev": "yarn run watch"
   },
   "devDependencies": {
-    "@magda/registry-aspects": "^0.0.51-0",
-    "@magda/scripts": "^0.0.51-0",
+    "@magda/registry-aspects": "^0.0.51-RC1",
+    "@magda/scripts": "^0.0.51-RC1",
     "@types/chai": "^4.0.0",
     "@types/chai-as-promised": "^7.1.0",
     "@types/express": "^4.0.35",
@@ -21,13 +21,13 @@
     "@types/mocha": "^2.2.41",
     "@types/nock": "^8.2.1",
     "@types/node": "^8.0.14",
+    "@types/read-pkg-up": "^3.0.1",
     "@types/sinon": "^4.1.3",
     "@types/superagent": "^3.5.5",
     "@types/supertest": "^2.0.3",
     "@types/urijs": "^1.15.34",
     "@types/uuid": "^3.4.0",
     "@types/yargs": "^8.0.2",
-    "@types/read-pkg-up": "^3.0.1",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "djv": "^2.1.1",
@@ -35,9 +35,9 @@
     "lazy-seq": "^1.0.0",
     "mocha": "^3.4.2",
     "nock": "^9.0.14",
+    "nyc": "^13.1.0",
     "sinon": "^4.2.1",
-    "typescript": "~2.5.0",
-    "nyc": "^13.1.0"
+    "typescript": "~2.5.0"
   },
   "dependencies": {
     "@types/request": "^2.0.0",
@@ -47,12 +47,12 @@
     "jsonwebtoken": "^7.4.1",
     "load-json-file": "^1.0.0",
     "moment": "^2.17.1",
+    "read-pkg-up": "^3.0.0",
     "request": "^2.79.0",
     "tsmonad": "^0.7.2",
     "urijs": "^1.18.12",
     "uuid": "^3.1.0",
-    "yargs": "^10.1.1",
-    "read-pkg-up": "^3.0.0"
+    "yargs": "^10.1.1"
   },
   "config": {
     "docker": {
