--- a/deploy/helm/magda/charts/gateway/templates/deployment.yaml
+++ b/deploy/helm/magda/charts/gateway/templates/deployment.yaml
@@ -37,6 +37,9 @@ spec:
 {{- if .Values.auth.googleClientId }}
             "--googleClientId", {{ .Values.auth.googleClientId | quote }},
 {{- end }}
+{{- if .Values.auth.aafClientUri}}
+            "--aafClientUri", {{ .Values.auth.aafClientUri| quote }},
+{{- end }}
 {{- if .Values.enableAuthEndpoint }}
             "--enableAuthEndpoint", {{ .Values.enableAuthEndpoint | quote }},
 {{- end }}
@@ -117,6 +120,14 @@ spec:
             secretKeyRef:
               name: oauth-secrets
               key: google-client-secret
+              optional: true
+{{- end }}
+{{- if .Values.auth.aafClientUri }}
+        - name: AAF_CLIENT_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: oauth-secrets
+              key: aaf-client-secret
               optional: true
 {{- end }}
 {{- if .Values.global.noDbAuth }}
