--- a/magda-admin-api/package.json
+++ b/magda-admin-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/admin-api",
-  "version": "0.0.51-0",
+  "version": "0.0.52-0",
   "scripts": {
     "build": "yarn run compile",
     "compile": "tsc -p tsconfig-build.json",
@@ -13,19 +13,19 @@
     "retag-and-push": "retag-and-push"
   },
   "dependencies": {
-    "@magda/typescript-common": "^0.0.51-0",
+    "@magda/typescript-common": "^0.0.52-0",
     "body-parser": "^1.13.2",
     "express": "^4.13.1",
     "http-proxy": "^1.16.2",
     "isomorphic-fetch": "^2.2.1",
     "kubernetes-client": "3.17.2",
     "lodash": "^4.17.4",
+    "nyc": "^13.1.0",
     "util.promisify": "^1.0.0",
-    "yargs": "^8.0.2",
-    "nyc": "^13.1.0"
+    "yargs": "^8.0.2"
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.51-0",
+    "@magda/scripts": "^0.0.52-0",
     "@types/chai": "^4.0.4",
     "@types/config": "0.0.32",
     "@types/express": "^4.0.35",
