--- a/magda-content-api/package.json
+++ b/magda-content-api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@magda/content-api",
-  "version": "0.0.51-0",
+  "version": "0.0.52-0",
   "scripts": {
     "build": "yarn run compile",
     "compile": "tsc -p tsconfig-build.json",
@@ -13,7 +13,7 @@
     "retag-and-push": "retag-and-push"
   },
   "dependencies": {
-    "@magda/typescript-common": "^0.0.51-0",
+    "@magda/typescript-common": "^0.0.52-0",
     "body-parser": "^1.13.2",
     "djv": "^2.1.1",
     "express": "^4.13.1",
@@ -25,7 +25,7 @@
     "yargs": "^8.0.2"
   },
   "devDependencies": {
-    "@magda/scripts": "^0.0.51-0",
+    "@magda/scripts": "^0.0.52-0",
     "@types/chai": "^4.1.2",
     "@types/express": "^4.0.35",
     "@types/lodash": "^4.14.96",
@@ -38,15 +38,13 @@
     "@types/supertest": "^2.0.4",
     "@types/urijs": "^1.15.38",
     "@types/yargs": "^8.0.2",
-    "@types/mime-types": "^2.1.0",
-    "@types/urijs": "^1.15.38",
     "chai": "^4.1.2",
     "mocha": "^3.5.3",
     "nock": "^9.1.6",
+    "nyc": "^13.1.0",
     "sinon": "^4.2.1",
     "supertest": "^3.0.0",
-    "typescript": "~2.5.0",
-    "nyc": "^13.1.0"
+    "typescript": "~2.5.0"
   },
   "config": {
     "docker": {
