--- a/magda-minion-broken-link/package.json
+++ b/magda-minion-broken-link/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/minion-broken-link",
   "description": "MAGDA Broken Link Minion",
-  "version": "0.0.51-RC1",
+  "version": "0.0.52-0",
   "scripts": {
     "build": "yarn run compile",
     "compile": "tsc -p tsconfig-build.json",
@@ -16,7 +16,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@magda/scripts": "^0.0.51-RC1",
+    "@magda/scripts": "^0.0.52-0",
     "@types/chai": "^4.0.2",
     "@types/ftp": "^0.3.29",
     "@types/lodash": "^4.14.71",
@@ -37,9 +37,9 @@
     "typescript": "~2.5.0"
   },
   "dependencies": {
-    "@magda/minion-framework": "^0.0.51-RC1",
-    "@magda/registry-aspects": "^0.0.51-RC1",
-    "@magda/typescript-common": "^0.0.51-RC1",
+    "@magda/minion-framework": "^0.0.52-0",
+    "@magda/registry-aspects": "^0.0.52-0",
+    "@magda/typescript-common": "^0.0.52-0",
     "ftp": "^0.3.10",
     "lodash": "^4.17.4",
     "lru-cache": "4.0.2",
