--- a/deploy/helm/magda-dev.yml
+++ b/deploy/helm/magda-dev.yml
@@ -215,7 +215,7 @@ connectors:
         name: magda-project-open-data-connector
       id: moretonbay
       name: Moreton Bay Regional Council Data Portal
-      sourceUrl: http://data.moretonbay.qld.gov.au/data.json
+      sourceUrl: http://datahub.moretonbay.qld.gov.au/data.json
     - image:
         name: magda-csw-connector
       id: metoc
