--- a/magda-csw-connector/package.json
+++ b/magda-csw-connector/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@magda/csw-connector",
   "description": "MAGDA OGC Catalogue Service for the Web (CSW) Connector",
-  "version": "0.0.51-RC4",
+  "version": "0.0.52-0",
   "scripts": {
     "build": "yarn run compile",
     "compile": "yarn run compile-node && yarn run compile-browser",
@@ -17,7 +17,7 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
-    "@magda/scripts": "^0.0.51-RC4",
+    "@magda/scripts": "^0.0.52-0",
     "@types/jsonpath": "^0.1.29",
     "@types/lodash": "^4.14.66",
     "@types/nock": "^9.3.0",
@@ -34,8 +34,8 @@
     "webpack": "^3.6.0"
   },
   "dependencies": {
-    "@magda/registry-aspects": "^0.0.51-RC4",
-    "@magda/typescript-common": "^0.0.51-RC4",
+    "@magda/registry-aspects": "^0.0.52-0",
+    "@magda/typescript-common": "^0.0.52-0",
     "jsonpath": "^0.2.11",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
